--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@vueuse/components": "^10.2.1",
     "@vueuse/core": "^10.2.1",
     "vue": "^3.2.47",
+    "vue-router": "4",
     "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
+    "@types/node": "^20.3.3",
     "@vitejs/plugin-vue": "^4.1.0",
-    "typescript": "^5.0.2",
+    "prettier": "^2.5.1",
     "vite": "^4.3.9",
     "vue-tsc": "^1.4.2"
   }
