--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@vueuse/components": "^10.2.1",
     "@vueuse/core": "^10.2.1",
+    "firebase": "^10.0.0",
     "vue": "^3.2.47",
     "vue-router": "4",
     "vuedraggable": "^4.1.0"
