--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc && vite build",
+    "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -13,14 +13,13 @@
     "@vueuse/core": "^10.2.1",
     "firebase": "^10.0.0",
     "vue": "^3.2.47",
-    "vue-router": "4",
-    "vuedraggable": "^4.1.0"
+    "vue-router": "4"
   },
   "devDependencies": {
     "@types/node": "^20.3.3",
     "@vitejs/plugin-vue": "^4.1.0",
     "prettier": "^2.5.1",
-    "vite": "^4.3.9",
-    "vue-tsc": "^1.4.2"
+    "vue-tsc": "^1.8.4",
+    "vite": "^4.3.9"
   }
 }
